--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">JetpackComposeExample</string>
     <string name="title_activity_columns">Columns</string>
     <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_dialog">DialogActivity</string>
 </resources>
